--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
       <img class="separator" src="resources/Seperator.svg" alt="separator">
       <div class="grid">
         <div class="project">
-          <img class="info-pic" src="resources/photo_1.png" alt="photo_1">
+          <img class="info-pic" src="resources/photo_1.png" alt="cloud Computing">
           <div class="desc">
             <h3 class="sub">Unlocking the power of cloud Computing: A Guide to Scalable Solutions</h3>
             <p class="date">November 12, 2024</p>
           </div>
         </div>
         <div class="project">
-          <img class="info-pic" src="resources/photo_2.png" alt="photo_1">
+          <img class="info-pic" src="resources/photo_2.png" alt="Machine Learning">
           <div class="desc">
             <h3 class="sub">The Future of AI How Machine Learning is Revolutionizing Industries</h3>
             <p class="date">November 12, 2024</p>
           </div>
         </div>
         <div class="project">
-          <img class="info-pic" src="resources/photo_3.png" alt="photo_1">
+          <img class="info-pic" src="resources/photo_3.png" alt="5G Business">
           <div class="desc">
             <h3 class="sub">The Impact of 5G on Business How Faster Networks are Transforming the Way We Work</h3>
             <p class="date">November 12, 2024</p>
